; ModuleID = '/home/carl/AnghaBench/xLua/build/luasocket/extr_except.c_unwrap.c'
source_filename = "/home/carl/AnghaBench/xLua/build/luasocket/extr_except.c_unwrap.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @unwrap to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @unwrap(i32* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  %4 = load i32*, i32** %3, align 8
  %5 = call i64 @lua_istable(i32* %4, i32 -1)
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %16

7:                                                ; preds = %1
  %8 = load i32*, i32** %3, align 8
  %9 = call i32 @lua_pushnumber(i32* %8, i32 1)
  %10 = load i32*, i32** %3, align 8
  %11 = call i32 @lua_gettable(i32* %10, i32 -2)
  %12 = load i32*, i32** %3, align 8
  %13 = call i32 @lua_pushnil(i32* %12)
  %14 = load i32*, i32** %3, align 8
  %15 = call i32 @lua_insert(i32* %14, i32 -2)
  store i32 1, i32* %2, align 4
  br label %17

16:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %17

17:                                               ; preds = %16, %7
  %18 = load i32, i32* %2, align 4
  ret i32 %18
}

declare dso_local i64 @lua_istable(i32*, i32) #1

declare dso_local i32 @lua_pushnumber(i32*, i32) #1

declare dso_local i32 @lua_gettable(i32*, i32) #1

declare dso_local i32 @lua_pushnil(i32*) #1

declare dso_local i32 @lua_insert(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
